# Diffusion

./: .buildinfo  .gitignore  Auralization Use.html  DiffEq2D.py  DiffEq3D-IMPULSE.py  DiffEq3D-StatSource.py  DiffEq3D.py  DiffEq3DAxis.py  DiffEq3DOptim.py  Diffusion_2D_Dxy_01.m  Documentation1D.html  Documentation2D.html  DocumentationAuralization.html  DocumentationFDM.html  DocumentationFVM.html  Finite Different Method Demo Tutorial.html  Finite Different Method Tutorial.html  Finite Different Method Use.html  Finite Volume Method Demo Tutorial.html  Finite Volume Method Tutorial.html  Finite Volume Method Use.html  FunctionCentreTime.py  FunctionClarity.py  FunctionDefinition.py  FunctionEDT.py  FunctionRT.py  LICENSE.md  Overview.html  README.md  StatisticalTheoryCalculation.py  __init__.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.txt  search.html  searchindex.js
.doctrees/: Auralization Use.doctree  Documentation1D.doctree  Documentation2D.doctree  DocumentationAuralization.doctree  DocumentationFDM.doctree  DocumentationFVM.doctree  Finite Different Method Demo Tutorial.doctree  Finite Different Method Tutorial.doctree  Finite Different Method Use.doctree  Finite Volume Method Demo Tutorial.doctree  Finite Volume Method Tutorial.doctree  Finite Volume Method Use.doctree  Overview.doctree  environment.pickle  index.doctree
Auralization/: Auralization.py  AuralizationFunction.py  AuralizationFunctionFrequency.py  FunctionRT.py  center_freq.npy  p_rec_off_deriv_band.npy  t.npy  t_off.npy  w_rec_band.npy  w_rec_off.npy  w_rec_off_band.npy  w_rec_off_deriv.npy  w_rec_off_deriv_band.npy
Diffusion_Module/: Auralizationfunctions.html  FDMfunctions.html  FVMfunctions.html  ReverberationFunctions.html  __init__.py
Diffusion_Module_ADE/: __init__.py
FiniteDifferentMethod/: DiffEq1D.py  DiffEq2D.py  DiffEq3D-IMPULSE.py  DiffEq3D-StatSource.py  DiffEq3D.py  FunctionDefinition.py
FiniteVolumeMethod/: 10x10x10.geo  10x10x10.msh  10x10x10.skp  3x3x3.msh  3x3x3.skp  8x8x8.geo  8x8x8.msh  8x8x8.skp  Corridor_vers3.msh  CreateMeshFVM.py  FVM-Freq.py  FVM-OneFrequency.py  FVM-functions.py  FVM.py  FVMInterface.py  FirstFloorCorridor.geo  FirstFloorCorridor.msh  FirstFloorShortCorridor.geo  FirstFloorShortCorridor.msh  FunctionEDT.py  FunctionRT.py  Lshape.msh  Lshape.skb  Lshape.skp  MeasurementRoom.msh  MeasurementRoom.skp  OthogonalityCheck.py  PostProcessFVM.py  Room3x3x3N.msh  Room8x8x8.msh  Scenario2.msh  Trialtoloadpickle.py  rect.geo  scenario2.geo  scenario2ilaria.geo  scenario2ilaria.msh  trial.py
_modules/: index.html
_sources/: Auralization Use.md.txt  Documentation1D.md.txt  Documentation2D.md.txt  DocumentationAuralization.md.txt  DocumentationFDM.md.txt  index.rst.txt  (+6 more)
(+229 files in other folders)
