[project]
name = "Diffusion_Module"
version = "0.1.0"
description = "Acoustics Simulation using the Diffusion Equation"
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0.0",
    "scipy",
    "matplotlib<3.7.0",
    "drawnow",
    "gmsh",
    "soundfile",
    "sounddevice",
    "pandas",
]

docs = [
    "sphinx",
]

dev = ["Diffusion[docs]"]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
