[project]
name = "Diffusion_Module"
version = "0.1.0"
description = "Acoustics Simulation using the Diffusion Equation"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0.0",
    "scipy",
    "matplotlib<3.7.0",
    "drawnow",
    "gmsh",
    "soundfile",
    "sounddevice",
    "pandas",
]

[project.optional-dependencies]
docs = [
    "sphinx",
]

dev = ["Diffusion[docs]"]

[project.urls]
Tracker = "https://github.com/building-acoustics-tu-eindhoven/Diffusion/issues"
Documentation = "https://building-acoustics-tu-eindhoven.github.io/Diffusion/"
Source = "https://github.com/building-acoustics-tu-eindhoven/Diffusion"


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
