[project]
name = "Diffusion_Module_ADE"
version = "0.1.4"
description = "Acoustics Simulation using the Diffusion Equation"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
authors = [
    {name = "Ilaria Fichera", email = "i.fichera@tue.nl"},
    {name = "Cédric Van hoorickx", email = "c.m.l.van.hoorickx@tue.nl"},
    {name = "Maarten Hoornikx", email = "m.c.j.hornikx@tue.nl"},
]
keywords = [
    "room acoustics", 
    "acoustic diffusion equation",
    "acoustic simulations" 
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy<2.0.0",
    "scipy",
    "gmsh",
    "soundfile",
    "sounddevice",
    "pandas",
    "pytest"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst_parser",
]

dev = ["Diffusion[docs]"]

[project.urls]
Tracker = "https://github.com/building-acoustics-tu-eindhoven/Diffusion/issues"
Documentation = "https://building-acoustics-tu-eindhoven.github.io/Diffusion/"
Source = "https://github.com/building-acoustics-tu-eindhoven/Diffusion"


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
